src/components/AssignRole/style/index.css
.upper-half {
  background-color: var(--white);
  /* background-image: url(../../../images/ranks.png);
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover; */
  /* clip-path: polygon(0 0, 100% 0%, calc(100% - 32px) 100%, 0% 100%);*/
  /* clip-path: polygon(0 0, 100% 0, 100% 100%, 0 84%); */
  display: flex;
  flex-direction: column;
  justify-content: end;
  align-items: center;
  width: 100%;
  height: 380px;
  position: sticky;
  top:0%;
  z-index: 1; 
}

.lower-half {
  /* transform: translateY(-61px); */
  /* margin-top:-80px; */
  display: flex;
  flex-direction: column;
  align-content: center;
  align-items: center;
  min-height: 65%;
  width: 100%;
  background-color: #fff4e2;
  color: var(--black);
  /* clip-path: polygon(0 0, 100% 16%, 100% 100%, 0 100%); */
}


@media only screen and (min-width: 390px)  and (max-width: 425px) {
 
.lower-half {

  min-height: 135% !important;

}
}


#rank-info {
  max-height: 1.875em;
  width: 80%;
  text-align: center;
  font-size: 1em;
  background: #ffedd2;
  background: #ffedd2;
  border: 1px solid #ffe0b1;
  box-shadow: 0px 6px 26px 5px rgba(118, 133, 160, 0.2);
  border-radius: 8px;
}

#rank-image {
  transform: rotateZ(-0deg) translateY(0.5em);
}

#coin-rank-2 {
  transform: translate(-2.5em, 6.6em);
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
  padding: 0.3em;
  border-radius: 100%;
  border: 2px solid var(--dim-white);
}

#coin-rank-1 {
  transform: translate(-0.1em, 3.25em);
  padding: 0.3em;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
  border-radius: 100%;
  border: 2px solid var(--golden);
}

#coin-rank-3 {
  transform: translate(1.9em, 7.6em);
  padding: 0.3em;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
  border-radius: 100%;
  border: 2px solid var(--dim-white);
}

.rank-coin-card {
  width: 80%;
  height: 1.875em;
  background-color: var(--white);
  box-shadow: 0px 6px 26px 5px rgba(118, 133, 160, 0.1);
  border-radius: 8px;
  display: flex;
  /* justify-content: space-between; */
  align-items: center;
}

.rank-choices {
  width: 2.5em;
  height: 2.5em;
  border-radius: 100%;
  color: var(--grey-shade);
  border: 1px solid var(--dim-white);
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  align-content: center;
  transition: 0.1s all ease-in-out;
}

.rank-choices:hover {
  cursor: pointer;
  transition: 0.1s all ease-in-out;
  background-color: #ffedd2;
  border: 1px solid #fcb956;
}

.isselected {
  background-color: #ffedd2;
  border: 1px solid #fcb956;
}

#team-name {
  width: 10.5em;
  z-index: 1;
  text-align: center;
  /* padding-left: 30px; */
  padding-top: 10px;
  padding-bottom: 10px; 
  height: 40px;
  outline: none;
  background: #d4e4e9;
  /* background-color: var(--white); */
  border-radius: 8px;
  border: none;
  font-size: 18px;
  margin-top: 70px;
  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 25px 20px -20px; */
}

#save-team-button {
  position: fixed;
  bottom: 20px;
  width: 450px;
}

#save-team-button button {
  margin-left: 65%;
}

@media only screen and (max-width: 600px) {
  #save-team-button {
    width: 100%;
  }
}

@media only screen and (min-width: 380px) and (max-width: 425px) {
  
#save-team-button button {
  margin-left: 0% !important;
  
}

#save-team-button {
  position: unset !important;
  display: flex;
  justify-content: center;
 
}
.save-team-button{
  position: unset !important;
}
}

#crown {
  transform: translate(1.8rem, 0.1rem);
}
#ramp {
  width: 100%;
  height: 80px;
  clip-path: polygon(0 0, 100% 100%, 100% 100%, 0 100%);
  /* margin-top: -80px; */
  /* transform: translateY(-80px); */
  display: flex;
  background-color: #fff4e2;
}
#ramp-wrapper {
  width: 100%;
  height: 80px;
  background-color: var(--white);
}

.ranks-img-wrapper{
  transform:translateY(-70px);
}
.superstar-border{
  border-left:5px solid var(--golden);
}
.mooning-border{
  border-left:5px solid var(--green);
}
.defi-border{
  border-left:5px solid red;
}

